fix: add 1rem gap to top

--- a/apps/web/app/regions/_components/region-title.module.scss
+++ b/apps/web/app/regions/_components/region-title.module.scss
@@ -12,7 +12,7 @@
 
 // 화면 크기가 작아지면 지역 > 상세 지역 글자 겹침 방지
 .region-id {
-  @media (max-width: 388px) {
+  @media (max-width: 430px) {
     transform: translateY(1rem);
   }
 }
